# motion

./: .gitignore  .motionrc.yml  .pre-commit-config.yaml  404.html  Cargo.toml  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  breast_pipeline.py  clipft.py  components.py  config.yaml  covertype_pipeline.py  dashboard.py  design.py  docker-compose.yml  dump.rdb  fake_data.json  index.html  iris_pipeline.py  mkdocs.yml  objects.inv  profile.txt  pyproject.toml  requirements.txt  scrapers.py  scratch.py  setup.py  sitemap.xml  transforms.py  triggers.py  unnecessary.py
.deprecated/: journal_copilot.py
.deprecated/motion/: __init__.py  data.py  entry.py  execute.py  transform.py  type.py
.deprecated/motion-ui/: package-lock.json  package.json
.deprecated/v1-sample-pipelines/: breast_pipeline.py
.github/workflows/: cd.yml  ci.yml  docs.yml  lint.yml  publish.yml  python-package.yml  stale.yml
api/application/: index.html
api/component/: index.html
api/component-instance/: index.html
api/mtable/: index.html
api/props-and-state/: index.html
api/state-migrator/: index.html
component-vis-app/: index.html  package.json
component-vis-app/src/: App.jsx  main.jsx  nodes.css  nodes.jsx
dashboard/: package.json
dashboardserver/: main.py
docs/: ideas.md  index.md  tutorial.md  vis.md
docs/api/: application.md  clientconn.md  component-instance.md  component.md  cursor.md  entry.md  fit_event_group.md  http.md  mtable.md  props-and-state.md  route.md  schema.md  state-migrator.md  trigger.md  vis.md
docs/concepts/: clientconn.md  cursor.md  index.md  project.md  relation.md  trigger.md
docs/deployment/: cli.md  http.md  local.md  remote.md  testing.md
docs/examples/: application.md  design-patterns.md  ecomm-review.md  nl_query.md
docs/getting-started/: concepts.md  installation.md
docs/getting_started/: concepts.md  configuration.md  installation.md
docs/tools/: clear.md  cli.md  dashboard.md  migrator.md  vis.md
docs/tutorials/: finetune.md  js.md
examples/application/: index.html
examples/design-patterns/: index.html
examples/hello-world/: index.html
examples/nl-query/: index.html
fashion/: dashboard.py  endpoints.py  mconfig.py  requirements.txt  simple_get_set_test.py  test_closet.py  test_suggestIdea.py
fashion/schemas/: __init__.py  all.py
fashion/scripts/: spin.py
fashion/triggers/: __init__.py  clipft.py  outfit.py  retrieval.py  scrapers.py  suggest.py  utils.py
getting-started/concepts/: index.html
getting-started/installation/: index.html
ideas/: ideas.md  roadmap.md  tutorial.md
motion/: __init__.py  api.py  cli.py  client.py  compiler.py  component.py  copy_utils.py  cursor.py  dashboard.py  dashboard_utils.py  data.py  dbcon.py  df.py  dicts.py  discard_policy.py  entry.py  execute.py  expire_policy.py  fit_task.py  instance.py  migrate.py  motion.pyi  mtable.py  route.py  routing.py  schema.py  script.py  store.py  task.py  transform.py  trigger.py  utils.py
motion-ui/: package-lock.json  package.json
motion-ui/components/: header.js  layout.js  layout.module.css  notebook.js
motion-ui/pages/: _app.js  _document.js  index.js  test.js
motion-ui/styles/: utils.module.css
motion/api/: __init__.py  api.py  models.py
motion/exampleproj/: config.txt  mconfig.py  test.py
motion/executors/: pipeline.py  transform_exec.py
motion/server/: __init__.py  application.py  fit_task.py  update_task.py
motion/serverless/: modal_wrapper.py
motion/state/: __init__.py  state.py
motion/static/: asset-manifest.json  index.html  manifest.json
motion_old/: cli.py  cursor.py  entry.py  schema.py  store.py  task.py
motion_old/api/: api.py
motionstate/: Cargo.toml
motionstate/src/: lib.rs  state_value.rs  temp_value.rs
rustystate/: Cargo.toml  pyproject.toml
rustystate/src/: lib.rs
search/: search_index.json
site/: 404.html  index.html  sitemap.xml  theme_version.html
site/getting-started/: index.html
site/search/: search_index.json
src/: lib.rs  state_value.rs  temp_value.rs
tests/: .motionrc.yml  conftest.py  notes.md  test_api.py  test_create_project.py  test_cursor.py  test_dev_box.py  test_expire_policies.py  test_fastapi.py  test_http_api.py  test_migrate.py  test_python_api.py  test_simple_pipeline.py  test_store.py  test_trigger_exec.py
tests/component/: test_bad_components.py  test_context_manager.py  test_counter.py  test_disabled_instance.py  test_multiple_routes.py  test_params.py  test_process.py  test_type_check.py  test_varying_batch.py
tests/parallel/: test_async.py  test_broken_fit.py  test_generator.py  test_many_keys.py  test_two_instance.py
tests/server/: test_dashboard.py  test_simple_server.py
tests/state/: test_dataframe.py  test_db_conn.py  test_flush_fit.py  test_instance_clear.py  test_instance_cli.py  test_model.py  (+5 more)
tests_old/: test_create_project.py  test_cursor.py  test_http_api.py  test_python_api.py  test_store.py  test_trigger_exec.py
ui/: App.svelte  app.py  package.json  pnpm-lock.yaml  rollup.config.js  tailwind.config.js
v1-sample-pipelines/: examplev2.py  fake_pipeline.py
(+62 files in other folders)
