[package]
name = "motionstate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "motion"
crate-type = ["cdylib"]

[dependencies]
redis = "0.23"
pyo3 = { version = "0.19", features = ["extension-module"] }
redlock = "2.0.0"
serde = {version="1.0.183", features = ["derive"]}
bincode = "1.3.3"
