[tool.poetry]
name = "motion-python"
version = "0.1.43"
description = "A trigger-based framework for creating and executing ML pipelines."
authors = ["Shreya Shankar <shreyashankar@berkeley.edu>"]
readme = "README.md"
packages = [{include = "motion"}]

[tool.poetry.dependencies]
python = "^3.9"
duckdb = "^0.7.1"
click = "^8.1.3"
colorlog = "^6.7.0"
croniter = "^1.3.8"
fastapi = "^0.95.0"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
numpy = "^1.24.2"
requests = "^2.28.2"
uvicorn = "^0.21.1"
httpx = "^0.23.3"
python-multipart = "^0.0.6"
pydantic = "^1.10.7"
urllib3 = "^1.26.15"
flask = "^2.2.3"
rich = "^13.3.4"

[tool.poetry.group.dev.dependencies]
poetry-types = "^0.3.5"
pytest = "^7.2.2"
mypy = "^1.1.1"
coverage = {extras = ["toml"], version = "^7.2.3"}
pre-commit = "^3.2.1"
types-requests = "^2.28.11.16"
types-croniter = "^1.3.2.7"
mkdocs = "^1.4.2"
mkdocs-terminal = "^4.2.0"
mkdocs-material = "^9.1.5"
mkdocstrings = {version="^0.20.0", extras = ["python"] }
pytkdocs = "^0.16.1"
linkchecker = "^10.2.1"
ruff = "^0.0.261"
maturin = "^0.14.17"
mike = "^1.1.2"
scikit-learn = "^1.2.2"

[tool.poetry.scripts]
motion = "motion.cli:motioncli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "motion"
mypy_path = "motion"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ['motion/tests*']
ignore_missing_imports = true
show_error_codes = true

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
fail_under = 100
