[tool.poetry]
name = "motion-python"
version = "0.1.107"
description = "A trigger-based framework for creating and executing ML pipelines."
authors = ["Shreya Shankar <shreyashankar@berkeley.edu>"]
readme = "README.md"
packages = [{include = "motion"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
colorlog = "^6.7.0"
pydantic = "^1.10.7"
cloudpickle = "^2.0"
redis = "^4.5.5"
psutil = "^5.9.5"
rich = "^13.4.1"
pyyaml = "^6.0.1"
pyarrow = "^13.0.0"
pandas = "^2.1.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
poetry-types = "^0.3.5"
pytest = "^7.2.2"
mypy = "^1.1.1"
coverage = {extras = ["toml"], version = "^7.2.3"}
pre-commit = "^3.2.1"
types-requests = "^2.28.11.16"
types-croniter = "^1.3.2.7"
mkdocs = "^1.4.2"
mkdocs-terminal = "^4.2.0"
mkdocs-material = "^9.1.5"
mkdocstrings = {version="^0.20.0", extras = ["python"] }
pytkdocs = "^0.16.1"
linkchecker = "^10.2.1"
ruff = "^0.0.261"
maturin = "^0.14.17"
mike = "^1.1.2"
scikit-learn = "^1.2.2"
types-redis = "^4.5.5.2"
fastapi = "^0.95.2"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"
types-pyyaml = "^6.0.12.10"

[tool.poetry.scripts]
motion = "motion.cli:motioncli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=/tmp/pytest"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::RuntimeWarning"
]

[tool.mypy]
files = "motion"
mypy_path = "motion"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ['motion/tests*']
ignore_missing_imports = true
show_error_codes = true

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
fail_under = 100
